# drinks-touch

./: .dockerignore  .env.example  .gitignore  .gitmodules  .imgbotconfig  .pre-commit-config.yaml  .renovaterc  .travis.yml  CHANGELOG.md  Dockerfile  README.md  build.sh  compose.dev.yaml  compose.prod.yaml  compose.yaml  config.example.py  debug.py  deploy.sh  docker-compose.yml  env.py  game.py  howto_profile.md  ladp_pw.example  mail_pw.example  oidc.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pullLdapUsersToDatabase.py  pyproject.toml  renovate.json  requirements-docker.txt  requirements.txt  runGame.sh  screen.py  setup.cfg  setup_all_docker.sh  stack-windows.yml  stack.yml  tool_add_drink.py
.github/workflows/: ci.yml  docker.yml  nodejs.yml  release-schedule.yml  schedule.yml
.husky/: commit-msg
barcode/: barcode_reader.py  barcode_worker.py
barcode_bin/: README  barcode
database/: storage.py
database/models/: drink.py  ldapUser.py  recharge_event.py  scan_event.py
docker/: Dockerfile  drinks_touch_xorg.service  flipdot.ldif  flipdot.schema  multiarch.Dockerfile  xinitrc
docker/hooks/: archs.csv  build  push
docs/: auflandungs_stats.sql  missing_eans.sql  report.sh  user_balance.sql  user_drinks.sh
drinks/: drinks.py
drinks_log/: log.py
drinks_scanner_display/barcode/: barcode_reader.py  barcode_worker.py
drinks_scanner_display/drinks/: drinks_manager.py
drinks_scanner_display/elements/: button.py  elm_list.py  image.py
drinks_scanner_display/influx/: influx.py
drinks_scanner_display/notifications/: notification.py
drinks_scanner_display/screens/: enter_pin.py  new_id_screen.py
drinks_scanner_display/stats/: flipdot.py  stats.py
drinks_scanner_display/users/: qr.py  users.py
drinks_touch/: alembic.ini  config.example.py  config.py  debug.py  env.py  game.py  oidc.py  overlays.py  pullLdapUsersToDatabase.py  screen.py  state.py  tool_add_drink.py  version_updater.py  webapp.py
elements/: base_elm.py  button.py  elm_list.py  image.py  label.py  progress.py
influx/: influx.py
notifications/: notification.py  reset_email_timeouts.py
production/: config.env.template  stack.yml
screens/: enter_pin.py  id_card_screen.py  main.py  names.py  new_id_screen.py  profile.py  recharge_screen.py  screen.py  screen_manager.py  success.py  wait_scan.py
sql/: 01-schema.sql  02-drinks.sql  export-docker.sh  export.sh  extract.sh  import-docker.sh
stats/: flipdot.py  stats.py
users/: qr.py  sync.py  users.py
webserver/: .boostraprc  .bootstraprc  npm-shrinkwrap.json  package.json  webpack.config.js  webserver.py
x/: 99-calibration.conf  disable-MIT-SHM.conf
(+245 files in other folders)
