[tool.poetry]
name = "drinks-touch"
version = "0.1.0"
description = ""
authors = ["malled"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-compress = "^1.14"
sudo = "^1.0.0"
influxdb = "^5.3.1"
jinja2 = "^3.1.3"
# newer versions of pillow are not compatible with our code
pillow = "^9.0.0"
premailer = "^3.10.0"
psycopg2-binary = "^2.9.9"
pygame = "2.6.0"
qrcode = "^7.4.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
werkzeug = "^3.0.1"
pyserial = "^3.5"
pystrich = "^0.8"
keyboard = "^0.13.5"
ldap3 = "^2.9.1"
sentry-sdk = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
