[tool.poetry]
name = "drinks-touch"
version = "0.1.0"
description = ""
authors = ["malled"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-compress = "^1.14"
sudo = "^1.0.0"
influxdb = "^5.3.1"
jinja2 = "^3.1.3"
# newer versions of pillow are not compatible with our code
pillow = "^10.0.0"
premailer = "^3.10.0"
psycopg2-binary = "^2.9.9"
pygame = "2.6.1"
qrcode = "^7.4.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
werkzeug = "^3.0.1"
pyserial = "^3.5"
pystrich = { git = "https://github.com/mmulqueen/pyStrich.git", rev = "34b797f2a4e8838bd75dda18a2d08d2830802a66" } # TODO: use proper release, once commit is part of one (https://github.com/mmulqueen/pyStrich/commit/34b797f2a4e8838bd75dda18a2d08d2830802a66#commitcomment-147458288)
keyboard = "^0.13.5"
ldap3 = "^2.9.1"
sentry-sdk = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
