[tool.poetry]
name = "drinks-touch"
version = "0.1.0"
description = ""
authors = ["malled"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-compress = "^1.14"
sudo = "^1.0.0"
influxdb = "^5.3.1"
jinja2 = "^3.1.3"
# newer versions of pillow are not compatible with our code
pillow = "^11.0.0"
premailer = "^3.10.0"
psycopg2-binary = "^2.9.9"
pygame = "2.6.1"
qrcode = "8.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
werkzeug = "^3.0.1"
pyserial = "^3.5"
pystrich = "^0.9"
keyboard = "^0.13.5"
ldap3 = "^2.9.1"
sentry-sdk = "^2.17"
babel = "^2.16.0"
python-dotenv = "^1.0.1"
pygit2 = "^1.16.0"
ics = "^0.7.2"
alembic = "^1.15.1"
cairosvg = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
black = "25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
